--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,10 @@
   "compilerOptions": {
     "target": "es5",
     "strict": true,
-    "alwaysStrict": false
+    "alwaysStrict": false,
+    "lib": [
+      "dom",
+      "es2015"
+    ]
   }
 }
